# cmakeSDL_starter

./: CMakeLists.txt
Game/: CMakeLists.txt
Game/private/: main.cpp
